<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_manager_okr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okr_manager"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_user_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_your_user_name"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_manager_okr" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_your_password"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/edit_text_user_name"
        app:layout_constraintTop_toBottomOf="@id/edit_text_user_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_password_again"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_your_password_again"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_business"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_your_name_business"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/edit_text_password_again"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password_again" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_your_email"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/edit_text_business"
        app:layout_constraintTop_toBottomOf="@id/edit_text_business" />

    <Button
        android:id="@+id/button_signup_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="#94CDF8"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

    <Button
        android:id="@+id/button_signup_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#94CDF8"
        android:text="@string/sign_uo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signup_signin" />


</androidx.constraintlayout.widget.ConstraintLayout>