<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_manager_okr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okr_manager_login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/text_acount_okr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/are_you_have_okr_acount"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_manager_okr" />

    <Button
        android:id="@+id/button_login_signup"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#94CDF8"
        android:text="@string/sign_up_here"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/text_acount_okr"
        app:layout_constraintTop_toBottomOf="@id/text_manager_okr" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_login_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_user_name"
        android:textSize="15sp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/text_acount_okr"
        app:layout_constraintTop_toBottomOf="@id/text_acount_okr" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_password"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/edittext_login_user"
        app:layout_constraintTop_toBottomOf="@id/edittext_login_user" />

    <TextView
        android:id="@+id/text_view_thank_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:text="@string/thank_you_to_believe_my_app_your_believe_are_my_motivition"
        android:textColor="#94CDF8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

    <Button
        android:id="@+id/button_login_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#94CDF8"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_thank_you" />

</androidx.constraintlayout.widget.ConstraintLayout>